meta data serialization
